--- a/main.html
+++ b/main.html
@@ -4,12 +4,94 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+
+<style>
+  form {
+    max-width: 500px;
+    margin: 0 auto;
+  }
+  label {
+    display: block;
+    margin-bottom: 5px;
+  }
+  input[type="text"],
+  input[type="email"],
+  select,
+  input[type="number"],
+  input[type="date"],
+  input[type="tel"],
+  input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+  }
+  input[type="checkbox"] {
+    margin-right: 5px;
+  }
+</style>
+
+
+	
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+
+<form action="#" method="post">
+	
+  <label for="name">Name:</label>
+  <input type="text" id="name" name="name" placeholder="Name" required>
+
+ <label for="email">Email:</label>
+  <input type="email" id="email" name="email" placeholder="Email" required>
+
+<label>Gender:</label>
+  <input type="radio" id="gender_m" name="gender" required>
+  <label for="gender_m">Male</label>
+  <input type="radio" id="gender_f" name="gender" required>
+  <label for="gender_f">Female</label>
+
+
+<label for="cars">Car Brands:</label>
+  <select id="cars" name="cars" required>
+    <option value="" disabled selected>--Please choose an option--</option>
+    <option value="Toyota">Toyota</option>
+    <option value="Honda">Honda</option>
+    <option value="Ford">Ford</option>
+    <option value="Chevrolet">Chevrolet</option>
+    <option value="Tesla">Tesla</option>
+  </select>	
+
+
+ <label for="age">Age:</label>
+  <input type="number" id="age" name="age" placeholder="Age" required>
+
+  <label for="dob">Date of Birth:</label>
+  <input type="date" id="dob" name="dob" required>
+
+
+ <label for="tel">Phone Number:</label>
+ <input type="tel" id="tel" name="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="xxx-xxx-xxxx">
+
+ <label for="password">Password:</label>
+ <input type="password" id="password" name="password" placeholder="Password" required>
+	
+  <input type="checkbox" id="tos" name="tos" required>
+  <label for="tos">I agree to the TOS</label>
+
+  <button type="submit">Submit</button>
+	
+
+</form>
+
+
+
+	
 
 </body>
 
